--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html ng-app="ingeSoftIi">
   <head>
     <meta charset="utf-8">
-    <title>ingeSoftIi</title>
+    <title>A la orden</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
